src/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* Disabling highlights */
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

  /*--background-color: #200E13;~
  --label-color: #B19B9E;
  --card-color: #2E1A1E;*/
  --text-color: #FFF8F7;
  --label-text-font: inherit;


  --background-color: #001523;
  --card-color: #00253e;
  --label-color: #9babb1;
}

* {
  font-family: Inter, system-ui, Avenir, Arial, sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body, div#app {
  background: var(--background-color);
  width: 100dvw;
  height: 100dvh;
  overflow-y: auto;
}



h1 {
  color: var(--text-color);
  font-size: 1.4rem;
  font-weight: 200;
}

h2 {
  font-size: 1.4rem;
  font-weight: 500;
  color: var(--text-color);
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  overflow: hidden;
}

h3, ::placeholder { 
  font-size: 1rem;
  font-weight: 400;
  color: var(--label-color);
  text-transform: capitalize;
}

h4 {
  font-size: 1rem;
  font-weight: 400;
  color: var(--text-color);
}

